# Web-RTS-game

backend/: Cargo.toml  build.rs  docker-compose.yml
backend/src/: main.rs  routes.rs  utils.rs
backend/src/Models/: Types.rs
backend/src/models/: mod.rs
backend/src/routes/: create_scenario.rs  get_area_types.rs  get_scenario_by_id.rs  get_scenarios.rs  get_unit_types.rs
frontend/: .gitignore  package-lock.json  package.json  vite.config.js
frontend/src/: main.tsx  routeTree.gen.ts  styles.css
frontend/src/actions/createScenario/: index.ts
frontend/src/actions/getEditorAreaTypes/: index.ts
frontend/src/actions/getEditorUnitTypes/: index.ts
frontend/src/actions/getScenarioById/: index.ts
frontend/src/actions/getScenarios/: index.ts
frontend/src/actions/models/: ObjectiveState.ts
frontend/src/actions/proto/: area_types.ts  create_scenario.ts  game_session.ts  response.ts  scenario.ts  summary_scenario.ts  unit_Types.ts
frontend/src/components/: Header.test.tsx  Header.tsx
frontend/src/components/ActionButton/: index.tsx
frontend/src/components/Panel/: index.tsx
frontend/src/routes/: __root.tsx  editor.tsx  index.tsx  load-scenario.tsx
frontend/src/utils/: canControlUnits.ts  createAreaStyleFactory.ts  renderEntity.ts
shared/: .proto  package-lock.json  package.json  units-config.json
shared/configs/: areas-config.json  units-config.json
shared/proto/: area_types.proto  create_scenario.proto  game_session.proto  response.proto  scenario.proto  summary_scenario.proto  unit_Types.ts  unit_types.proto
(+24 files in other folders)
