[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
tracing-subscriber = "0.3.19"
prost = "0.12"
prost-types = "0.12"
tower-http = { version = "0.5", features = ["cors"] }
mongodb = "3.2.3"
tracing = "0.1.41"
futures = "0.3.31"
redis = { version = "0.32.1", features = ["tokio-comp"] }

[build-dependencies]
prost-build = "0.13.5"
